--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="box"></div>
 <div>
-  <button class="button-add">Add class</button>
-  <button class="button-remove">Remove class</button>
-  <button class="button-toggle">Toggle class</button>
+  <button class="button-rotate">rotation</button>
+  <button class="button-background">background</button>
+  <button class="button-radius">radius</button>
 </div>
   </body>
 </html>
