--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <script defer type="module" src="./index.js"></script>
   </head>
+  
   <body>
-    <div class="box"></div>
-<div>
-  <button class="button-rotate">rotation</button>
-  <button class="button-background">background</button>
-  <button class="button-radius">radius</button>
-</div>
+   
+
+    <main class="page-home">Home</main>
+    <main class="page-bookmarks hidden">Bookmarks</main>
+    <main class="page-create hidden">Create</main>
+    <main class="page-settings hidden">Settings</main>
+    <section class="navigation">
+      <button class="button-home active">Home</button>
+      <button class="button-bookmarks">Bookmarks</button>
+      <button class="button-create">Create</button>
+      <button class="button-settings">Settings</button>
+    </section>
+
   </body>
 </html>
