--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,15 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <script defer type="module" src="./index.js"></script>
   </head>
-  
+
   <body>
-   
-
-    <main class="page-home">Home</main>
-    <main class="page-bookmarks hidden">Bookmarks</main>
-    <main class="page-create hidden">Create</main>
-    <main class="page-settings hidden">Settings</main>
-    <section class="navigation">
-      <button class="button-home active">Home</button>
-      <button class="button-bookmarks">Bookmarks</button>
-      <button class="button-create">Create</button>
-      <button class="button-settings">Settings</button>
-    </section>
-
+    <header data-header></header>
+    <form data-form>
+      <label>
+        Header text
+        <input name="header-text" />
+      </label>
+      <button>Set text</button>
+    </form>
   </body>
 </html>
