--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
   </head>
 
   <body>
-    <header data-header></header>
+    <div data-box class="box"></div>
     <form data-form>
       <label>
-        Header text
-        <input name="header-text" />
+        Class:
+        <input name="class" />
       </label>
-      <button>Set text</button>
+      <button>Set class</button>
     </form>
   </body>
 </html>
