--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
   <body>
     <div data-box class="box"></div>
+    <output data-output></output>
     <form data-form>
       <label>
         Class:
