Implement inline style background-color

--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,14 @@
   </head>
 
   <body>
+    <div data-box class="box"></div>
+    <output data-output></output>
     <form data-form>
       <label>
-        First:
-        <input name="first" />
+        Color:
+        <input placeholder="e.g. hotpink" name="color" />
       </label>
-      <label>
-        Second:
-        <input name="second" />
-      </label>
-      <button>Switch!</button>
+      <button>Set color</button>
     </form>
   </body>
 </html>
